fix img align and add col-md

--- a/style.css
+++ b/style.css
@@ -5,9 +5,3 @@ img{
     width: 100%;
 
 }
-
-.kep{
-    display: grid;
-    place-items: center;
-    height: 42vh;
-}
